get all complaints was added to docs/swagger
